--- a/home.css
+++ b/home.css
@@ -297,4 +297,11 @@ h3{
     display: block;
 
 }
+.HelpInp{
+    margin-top: 15px;
+    margin-left: 20px;
+    padding: 20px;
+    width: 80%;
+    
+}
 
