--- a/home.css
+++ b/home.css
@@ -119,7 +119,7 @@ nav .bi{
         padding: 30px;
     }
 }
-/* ------Shop------- */
+/* ------Items------- */
 
 .Items{
     width: 80%;
@@ -302,6 +302,6 @@ h3{
     margin-left: 20px;
     padding: 20px;
     width: 80%;
-    
+
 }
 
